test/code/test_namespace_block.php
<?php

namespace Coding\Specially\MyCode {
    function hello($world) { print "hello $world\n"; }
}

?>

